replaced new Integer with Integer.valueOf